Bug 42143 - Fix line number handling in HTMLTreeBuilder to fix a zillion layout tests
Summary: Fix line number handling in HTMLTreeBuilder to fix a zillion layout tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-12 22:37 PDT by Eric Seidel (no email)
Modified: 2010-07-13 00:40 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.78 KB, patch)
2010-07-12 22:40 PDT, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-12 22:37:31 PDT
Fix line number handling in HTMLTreeBuilder to fix a zillion layout tests
Comment 1 Eric Seidel (no email) 2010-07-12 22:40:03 PDT
Created attachment 61328 [details]
Patch
Comment 2 Adam Barth 2010-07-12 22:51:42 PDT
Comment on attachment 61328 [details]
Patch

This whole +1 thing is out of control.  Can we use the type system to make this easier?  Can we just agree on either 0 or 1 based?
Comment 3 Eric Seidel (no email) 2010-07-12 22:59:08 PDT
Interesting thought.  We could use the type system to convert from parser line numbers to script line numbers.  I completely agree that the +1 thing is out of control.
Comment 4 WebKit Commit Bot 2010-07-12 23:53:28 PDT
Comment on attachment 61328 [details]
Patch

Clearing flags on attachment: 61328

Committed r63180: <http://trac.webkit.org/changeset/63180>
Comment 5 WebKit Commit Bot 2010-07-12 23:53:33 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 WebKit Review Bot 2010-07-13 00:40:05 PDT
http://trac.webkit.org/changeset/63180 might have broken Chromium Win Release
The following changes are on the blame list:
http://trac.webkit.org/changeset/63178
http://trac.webkit.org/changeset/63179
http://trac.webkit.org/changeset/63180
http://trac.webkit.org/changeset/63181