2010-07-12  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Fix line number handling in HTMLTreeBuilder to fix a zillion layout tests
        https://bugs.webkit.org/show_bug.cgi?id=42143

        Covered by a zillion layout tests.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndTag):
        (WebCore::HTMLTreeBuilder::processScriptStartTag):

Canonical link: https://commits.webkit.org/54036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63180 268f45cc-cd09-0410-ab3c-d52691b4dbfc